# Zap

./: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  disk.rs  file_explorer.rs  main.rs
src/components/: diskGrid.tsx  historySearches.tsx  listItem.tsx  loading.tsx  nav.tsx  recentList.tsx  resultList.tsx  search.tsx  sidebar.tsx  themeButton.tsx  toolbar.tsx
src/context/: diskContext.tsx  searchContext.tsx  settingsContext.tsx
src/lib/: utils.ts
src/types/: index.ts
