[package]
name = "zap"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.11"
walkdir = "2.3.1"
rayon = "1.5.0"
fuzzy-matcher = "*"
dirs = "5.0.1"
lazy_static = "1.4.0"
indicatif = "0.17.8"
window-vibrancy = "0.4.0"
window-shadows = "0.2.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
